corrected the spacing between visibility and type buttons

--- a/src/pages/Editor.module.css
+++ b/src/pages/Editor.module.css
@@ -40,6 +40,7 @@
 .editor .active_toggle_wrapper {
   display: flex;
   align-items: center;
+  margin-right: var(--basis_x4);
 }
 .editor .ion_toggle {
   --background: var(--red);
